<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    tools:context=".ui.EditBeaconActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_beacon_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_beacon_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawableStart="@mipmap/ic_notification_overlay"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/beacon_details" />
                </RelativeLayout>

                <!-- description -->
                <LinearLayout
                    android:id="@+id/iv_beacon_desc_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <!-- description -->
                        <ImageView
                            android:id="@+id/iv_beacon_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_rating_star_on_pressed_holo_dark" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/iv_beacon_desc"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_beacon_desc_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/beacon_desc"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/et_beacon_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/beacon_desc_tip"
                                android:textSize="14sp"
                                android:maxLength="256" />

                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/drawable_padding"
                        android:layout_marginBottom="@dimen/drawable_padding"
                        android:background="@color/colorPrimary" />
                </LinearLayout>

                <!-- mobility -->
                <LinearLayout
                    android:id="@+id/iv_beacon_mobility_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_beacon_mobility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/btn_rating_star_on_pressed_holo_dark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/iv_beacon_mobility"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_beacon_mobility_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/beacon_mobility"
                                android:textSize="10sp" />

                            <Spinner
                                android:id="@+id/sp_beacon_mobility_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:textSize="14sp" />

                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/drawable_padding"
                        android:layout_marginBottom="@dimen/drawable_padding"
                        android:background="@color/colorPrimary" />
                </LinearLayout>

                <!-- place -->
                <LinearLayout
                    android:id="@+id/iv_beacon_place_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_beacon_place_group_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_rating_star_on_pressed_holo_dark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/iv_beacon_place_group_img"
                            android:orientation="vertical">

                            <!-- place id -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Place:"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/iv_beacon_place_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Place information"
                                android:textSize="14sp"
                                android:maxLength="256" />

                            <!-- indoor level -->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Indoor level:"
                                    android:textSize="10sp" />

                                <EditText
                                    android:id="@+id/iv_beacon_indoor_level"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:hint="Indoor Level"
                                    android:textSize="14sp"
                                    android:maxLength="64" />
                            </LinearLayout>

                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/drawable_padding"
                        android:layout_marginBottom="@dimen/drawable_padding"
                        android:background="@color/colorPrimary" />
                </LinearLayout>

                <!-- longitude latitude -->
                <LinearLayout
                    android:id="@+id/iv_beacon_longitude_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_beacon_indoor_level_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_rating_star_on_pressed_holo_dark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_toEndOf="@id/iv_beacon_indoor_level_img"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Longitude / Latitude"
                                android:textSize="10sp" />

                            <!-- 本sample code经纬度为手动输入，开发者应从Map中获取正确的经纬值 -->
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <!-- longitude -->
                                <EditText
                                    android:id="@+id/iv_beacon_longitude"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0.0"
                                    android:inputType="numberSigned|numberDecimal"
                                    android:hint="longitude"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:text=" / "
                                    android:textSize="10sp" />

                                <!-- latitude -->
                                <EditText
                                    android:id="@+id/iv_beacon_latitude"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:text="0.0"
                                    android:hint="latitude"
                                    android:inputType="numberSigned|numberDecimal"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/drawable_padding"
                        android:layout_marginBottom="@dimen/drawable_padding"
                        android:background="@color/colorPrimary" />
                </LinearLayout>

                <!-- properties -->
                <LinearLayout
                    android:id="@+id/iv_beacon_properties_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_beacon_properties"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/btn_rating_star_on_pressed_holo_dark" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/iv_beacon_properties"
                            android:orientation="vertical">

                            <!-- properties head tips -->
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_centerVertical="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/beacon_properties"
                                        android:textSize="10sp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/beacon_properties_tip"
                                        android:textSize="10sp" />
                                </LinearLayout>

                                <ImageView
                                    android:id="@+id/iv_add_beacon_properties"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:background="@drawable/iv_bg_press_down"
                                    android:clickable="true"
                                    android:padding="@dimen/drawable_padding"
                                    android:src="@mipmap/ic_add" />
                            </RelativeLayout>

                            <!-- all properties -->
                            <com.huawei.hms.nearby.beaconmanager.ui.ExpandListView
                                android:id="@+id/lv_beacon_properties"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </LinearLayout>


                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/drawable_padding"
                        android:layout_marginBottom="@dimen/drawable_padding"
                        android:background="@color/colorPrimary" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
